--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "nginx": "^1.0.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^4.2.0",
     "web-vitals": "^2.1.4"
