--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
     command: gunicorn backend.wsgi --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
+  websockets:
+    build:
+      context: ./backend
+    command: daphne -b 0.0.0.0  -p 8080 backend.asgi:application
+    ports:
+      - "8080:8080"
   frontend:
     build:
       context: ./frontend
@@ -15,12 +21,13 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - 80:8080
+      - "80:8080"
     volumes:
       - ./nginx/nginx-setup.conf:/etc/nginx/conf.d/default.conf:ro
       - react_build:/var/www/frontend
     depends_on:
       - backend
+      - websockets
       - frontend
 volumes:
   react_build:
