--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -2,9 +2,25 @@ upstream api {
     server backend:8000;
 }
 
+upstream ws_socket {
+    server websockets:8080;
+}
+
 server {
   listen 8080;
+  location /ws {
+    proxy_pass http://ws_socket;
+  }
+  location @proxy_to_ws {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # additional
+    proxy_set_header X-Url-Scheme $scheme; # additional 
 
+    proxy_pass   http://ws_socket;
+  }
   location / {
     root /var/www/frontend;
   }
