--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -23,6 +23,8 @@ server {
   }
   location / {
     root /var/www/frontend;
+    index  index.html index.htm;
+    try_files $uri /index.html;  
   }
 
   location /api/ {
